Add social icons

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ link-pgh_techfest-code:     https://github.com/kindasimple/PGHTechFest
 link-pgh_techfest-win8:          http://apps.microsoft.com/windows/en-us/app/pghtechfest/630784e7-6037-494c-94d8-6eea9f468125
 link-recollection-win8:          http://apps.microsoft.com/windows/en-us/app/699fe4c9-13a8-4ff7-b2df-d6cae8802f83
 link-recollection-web:           http://mnemonal.com
+link-big_arms_club-web:				http://bigarmsclub.com
 email-link:					mailto:kindasimple@gmail.com
 email-text:					kindasimple@gmail.com
 
