--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -1,5 +1,5 @@
 markdown:	redcarpet
 link-live_reload-url:	 http://localhost:35729/livereload.js
-link-base_url:           http://localhost:4000
+link-base_url:           http://localhost:4000/
 link-blog:               http://localhost:4000/blog
 link-url:                http://localhost:4000
