--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
+baseurl: ""
+
 ## Dependencies
 markdown: kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "prettify"]
 
-theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes@4.24.0
 repository: kindasimple/kindasimple.github.io
 minimal_mistakes_skin: "dark"
 logo: "/assets/images/88x88.png"
