--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -3,3 +3,4 @@ link-live_reload-url:	 http://localhost:35729/livereload.js
 link-base_url:           http://localhost:4000/
 link-blog:               http://localhost:4000/blog
 link-url:                http://localhost:4000
+siteurl:                http://localhost:4000/
