--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,7 @@ main:
     url: /blog/
   - title: "Projects"
     url: /projects/
+  - title: "Categories"
+    url: /categories/
   - title: "Interests"
     url: /interests/
